--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,6 +28,10 @@ header::after {
     border-top: 1px dashed #e5dcc8;
 }
 
+.navigation {
+    padding: 0.5rem 0;
+}
+
 .site-name {
     font-family: "IBM Plex Serif", Georgia, serif;
     font-size: 2rem;
@@ -36,11 +40,26 @@ header::after {
     text-decoration: none;
     border: none;
     display: inline-block;
-    padding: 1.5rem 0;
+    padding-bottom: 0.75rem;
 }
 
 .site-name:hover {
     opacity: 0.7;
+}
+
+.site-definition {
+    font-family: "IBM Plex Sans", system-ui, sans-serif;
+    font-size: 0.875rem;
+    color: #666;
+    margin: 0;
+    padding: 0;
+    line-height: 1.4;
+    font-size: 0.75rem;
+}
+
+.site-definition em {
+    font-style: italic;
+    color: #888;
 }
 
 nav ul {
@@ -158,7 +177,7 @@ nav a:hover {
 footer {
     width: 100%;
     max-width: 100%;
-    text-align: center;
+    text-align: left;
     border-left: 1px dashed #e5dcc8;
     border-right: 1px dashed #e5dcc8;
     margin-left: auto;
