--- a/templates/base.html
+++ b/templates/base.html
@@ -125,8 +125,8 @@
                 >
                     <a href="/" class="site-name">runpiper</a>
                     <p class="site-definition">
-                        <em>noun</em> · agent runtime for building long-running
-                        agents
+                        <em>noun</em> · open source agent runtime built in rust
+                        for long-running AI agents
                     </p>
                 </nav>
             </div>
