--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,13 @@ name=search_term_string" } } {% endblock %} {% block head %}
                     DevOps overhead.
                 </p>
             </div>
+            <div class="card feature-card">
+                <h3>Limit your threat surface</h3>
+                <p>
+                    Limit your threat surface by running your agents on your own
+                    infrastructure. No vendor lock-in.
+                </p>
+            </div>
         </div>
     </div>
 </section>
