--- a/static/css/main.css
+++ b/static/css/main.css
@@ -126,7 +126,7 @@ header::after {
 
 .hamburger-icon::before,
 .hamburger-icon::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 24px;
     height: 2px;
@@ -160,7 +160,7 @@ nav ul {
     padding: 0;
     margin: 0;
     display: flex;
-    gap: 2rem;
+    gap: 0rem;
 }
 
 nav a {
