--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
         <link
             rel="icon"
             type="image/svg+xml"
-            href="/static/images/favicon-32x32.png"
+            href="/static/images/favicon.svg"
         />
         <link
             rel="apple-touch-icon"
